--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -54,14 +54,14 @@ On page fully loaded, adds a class to the last paragraph of document
 
 Ex.  "*"  selects all elements
 
-- every attribute Not equal to something
-- every attribute equals selector [name='value']
-- :checkbox  selects all elements of type checkbox
-- :gt() selects all elements at an index greater than index..
-- :has() selects elems which contain at least one elem matching ..
-etc..etc..etc..    `point made` => ability to come up with pretty complex selections.
+- every attribute Not equal to something   &nbsp; :balloon:
+- every attribute equals selector [name='value']   &nbsp; :balloon:
+- :checkbox  selects all elements of type checkbox    &nbsp; :balloon:
+- :gt() selects all elements at an index greater than index..    &nbsp; :balloon:
+- :has() selects elems which contain at least one elem matching ..    &nbsp; :balloon:              
+etc..etc..etc..    `point made` => ability to come up with pretty complex selections.         
 
-Ex: using :odd modifier to highlight every other row (3-lines-of-code)
+Ex: using :odd modifier to highlight every other row (3-lines-of-code)       
 
 ```
 	$(document).ready(function() {
@@ -79,7 +79,7 @@ Ex: using :odd modifier to highlight every other row (3-lines-of-code)
 > here starts by applying class highlight to every odd row in document.
 > then looks for all tds containing the letter 'o' and applies class highlight2
 
-### jQuery event handling
+### jQuery event handling &nbsp; :paperclip:
 attach a function to events: blur, change, click, focus, mouseover etc
 
 [jQuery Events](http://api.jquery.com/category/events)
@@ -91,11 +91,11 @@ attach a function to events: blur, change, click, focus, mouseover etc
 ```
 > Passing this event handler this anonymous function and when this particular selector has this particular action apply to it, then my function will be trigger and whatever specified done
 
-### ++*Within an Event handling function*++ `$(this)` references the ==element the action occurred with==.
+### *Within an Event handling function* `$(this)` references the element the action occurred with.
 
 In jQuery doing:
 
- $(this)     ==> that would enable me to capture the item the element occurred with - **++the item the user interacted with++**
+ $(this)     ==> that would enable me to capture the item the element occurred with - **the item the user interacted with**
 
 Ex. wanna target td on a table so i could do:
 
