--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -93,9 +93,9 @@ attach a function to events: blur, change, click, focus, mouseover etc
 
 ### *Within an Event handling function* `$(this)` references the element the action occurred with.
 
-In jQuery doing:
+In jQuery doing:  &nbsp; :loop:
 
- $(this)     ==> that would enable me to capture the item the element occurred with - **the item the user interacted with**
+ $(this)     ==> that would enable me to capture the item the element occurred with - **the item the user interacted with** :electric_plug:
 
 Ex. wanna target td on a table so i could do:
 
