--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -93,11 +93,11 @@ attach a function to events: blur, change, click, focus, mouseover etc
 
 ### *Within an Event handling function* `$(this)` references the element the action occurred with.
 
-In jQuery doing:  &nbsp; :loop:
+In jQuery doing:  &nbsp; :loop: :electric_plug:
 
- $(this)     ==> that would enable me to capture the item the element occurred with - **the item the user interacted with** :electric_plug:
+ $(this)     ==> that would enable me to capture the item the element occurred with - **the item the user interacted with** 
 
-Ex. wanna target td on a table so i could do:
+Ex. wanna target td on a table so i could do:  &nbsp; :battery:
 
 $('td')  as my selector  ==> so i know this is what i'm referencing
 
@@ -108,12 +108,12 @@ $('td')  as my selector  ==> so i know this is what i'm referencing
         //highlight a table cell(s)
 	});
 ```
-But if the intent is to highlight ONLY THAT Particular table cell then:
+But if the intent is to highlight ONLY THAT Particular table cell then:  &nbsp; :moneybag:
 ```
       $(this)
 ```
 
-Ex:
+Ex:  &nbsp;:telephone:
 ```
 	$(document).ready(function() {
     	$('td:odd').addClass('highlight');
@@ -148,7 +148,7 @@ Ex:
 
 
 
-### multiple elements selection:
+### multiple elements selection:  &nbsp; :tv:
 
 - select all `li`'s:     &nbsp; :bamboo:  
 $('li');       
