--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -213,6 +213,9 @@ new instance you create.  :white_flower:
  
  
  
+ ### HTML DOM Prototypes &nbsp; :boom:
+ **All DOM elements** inherit from an **HTMLElement constructor** (including Internet Explorer 8).      
+ By making HTMLElement prototype accessible, the browser provide us with the ability to **extend any HTML node** of our choosing.  &nbsp; :dancer: :dancer:
  
  
  
