--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -219,10 +219,34 @@ new instance you create.  :white_flower:
  By making HTMLElement prototype accessible, the browser provide us with the ability to **extend any HTML node** of our choosing.  &nbsp; :dancer: :dancer:
  
  
+ Ex:  
+ 
+ *  Adds a new method to all elements by adding it to the HTMLElement prototype     &nbsp; :fire:
+ 
+ ```
+ 
+ HTMLElement.prototype.remove = function() {
+    if(this.parentNode) {
+        this.parentNode.removeChild(this);
+    }
+ };
+ 
+ ```
+ 
+ *  old way of doing things    &nbsp;  :dash:
+ 
+ ```
+   var a = document.getElementById('a');
+   a.parentNode.removeChild(a);
+   
+ ```
  
  
+ #### so now you can do this:
  
- 
+ ```
+   document.getElementById('x').remove();         //and is GONE!  &nbsp;  :fire:
+ ```
  
  
  
