--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -242,10 +242,10 @@ new instance you create.  :white_flower:
  ```
  
  
- #### so now you can do this:
+ #### so now you can do this:   &nbsp;  :fire:
  
  ```
-   document.getElementById('x').remove();         //and is GONE!  &nbsp;  :fire:
+   document.getElementById('x').remove();         //and is GONE!  
  ```
  
  
