--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -214,7 +214,7 @@ new instance you create.  :white_flower:
 <br> 
 <hr> 
  
-### HTML DOM Prototypes &nbsp; :boom:    (JavaScript Ninja - John Resig - created JQuery)
+### HTML DOM Prototypes &nbsp; :boom:   &nbsp; (JavaScript Ninja - John Resig)
  **All DOM elements** inherit from an **HTMLElement constructor** (including Internet Explorer 8).      
  By making HTMLElement prototype accessible, the browser provide us with the ability to **extend any HTML node** of our choosing.  &nbsp; :dancer: :dancer:
  
