--- a/1.notesJS/22.BrowserObjectModel.md
+++ b/1.notesJS/22.BrowserObjectModel.md
@@ -1,3 +1,37 @@
 # Browser Object Model: Window Object &nbsp; :neckbeard:
 - current browser window
 - topmost object in the browser object model
+
+
+
+
+
+
+
+
+
+|      PROPERTY                        DESCRIPTION           
+|------------------------------ :-------------------------------------------------------------------------------:|            |                               |                                                                                | 
+| window.innerHeight            |    Height of window (excluding chrome)                                         |
+| window.innerWidth             |    Width of window (excluding chrome)                                          |
+| window.pageXOffset            |    Distance has been scrolled horizontally in pixels                           |
+| window.pageYOffset            |    Distance has been scrolled vertically in pixels                             |
+| window.screenX                |    X coordinate of pointer, relative to top left corner                        |     
+| window.screenY                |    Y coordinate of pointer, relative to top left corner                        |
+| window.location               |    Current URL of window                                                       |
+| window.document               |    Reference to document object which is used to represent current page        |   
+| window.history                |    Reference to history object for browser window                              |
+| window.history.length         |    Numbers of items in history object                                          |
+| window.screen                 |    Reference to screen object                                                  |
+| window.screen.width           |    Accesses screen object and finds value of its width property                |           
+| window.screen.height          |    Accesses screen object and finds value of its height property               |            
+|                                       
+
+
+
+
+
+
+
+
+
