--- a/1.notesJS/22.BrowserObjectModel.md
+++ b/1.notesJS/22.BrowserObjectModel.md
@@ -10,8 +10,9 @@
 
 
 
-|      PROPERTY                        DESCRIPTION           
-|------------------------------ :-------------------------------------------------------------------------------:|            |                               |                                                                                | 
+|      PROPERTY                 |                  DESCRIPTION                                                   |
+| :-----------------------------  :----------------------------------------------------------------------------- |         
+|                               |                                                                                | 
 | window.innerHeight            |    Height of window (excluding chrome)                                         |
 | window.innerWidth             |    Width of window (excluding chrome)                                          |
 | window.pageXOffset            |    Distance has been scrolled horizontally in pixels                           |
@@ -25,7 +26,7 @@
 | window.screen                 |    Reference to screen object                                                  |
 | window.screen.width           |    Accesses screen object and finds value of its width property                |           
 | window.screen.height          |    Accesses screen object and finds value of its height property               |            
-|                                       
+                                       
 
 
 
