--- a/1.notesJS/22.BrowserObjectModel.md
+++ b/1.notesJS/22.BrowserObjectModel.md
@@ -10,8 +10,8 @@
 
 
 
-|      PROPERTY                 |                  DESCRIPTION             |
-| :----------------------          :--------------------------------------  |         
+|  Attribute                    |             Description        |
+|  :-------------               |   :-----------------------              |      
 |                               |                                                                                | 
 | window.innerHeight            |    Height of window (excluding chrome)                                         |
 | window.innerWidth             |    Width of window (excluding chrome)                                          |
