--- a/1.notesJS/22.BrowserObjectModel.md
+++ b/1.notesJS/22.BrowserObjectModel.md
@@ -27,6 +27,16 @@
 | `window.screen.width`           |    Accesses screen object and finds value of its width property            |      
 | `window.screen.height`          |    Accesses screen object and finds value of its height property               |            
                                        
+<br/>
+
+|  Method                     |             Property                                                           |
+|  :-------------               |   :-----------------------                                                     |      
+|                               |                                                                                | 
+| `window.alert`                |    Creates a dialog box with message                                         |
+| `window.open`                 |    Opens new browser window with URL as paramether                                          |
+| `window.print`                |    Tells browser to print contents of current page                           |
+
+
 
 
 
