--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -1,6 +1,6 @@
 ### log of all the node types and their values
 - `Node` is just a javascript constructor function.    
--  Node inherits from `Object.prototype`
+- `Node` inherits from `Object.prototype`
 
 <br />
   
