--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -6,3 +6,10 @@
   
  <kbd>node types</kbd>       
  ![js1](images/dom01.png)
+ 
+ 
+ <br />
+  
+ <kbd>node types</kbd>       
+ ![js1](images/dom02.png)
+
