--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -13,3 +13,28 @@
  <kbd>node types</kbd>       
  ![js1](images/dom02.png)
 
+
+<br>
+<hr>
+
+
+|         Node Property                                                           |
+|   :-----------------------                                                     |      
+|                                                                                | 
+|    ChildNodes                                    |
+|    firstChild                                         |
+|    lastChild                           |
+|    nextSibling                           |
+|    nodeName                    |     
+|    nodeType                       |
+|    nodeValue                                                    |
+|    parentNode      |   
+|    previousSibling                       |
+      
+                                       
+<br/>
+
+
+
+
+
