--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -15,6 +15,7 @@
 
 
 <br>
+### list of properties available to the element node object
 <hr>
 
 
@@ -34,6 +35,19 @@
                                        
 <br/>
 
+
+|         Node Property                                                           |
+|   :-----------------------                                                     |      
+|                                                                                | 
+|    ChildNodes                                    |
+|    firstChild                                         |
+|    lastChild                           |
+|    nextSibling                           |
+|    nodeName                    |     
+|    nodeType                       |
+|    nodeValue                                                    |
+|    parentNode      |   
+|    previousSibling                       |
 
 
 
