--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -38,18 +38,18 @@
 <br/>
 
 
-|         Node Property                                                           |
+|         Node Methods                                                           |
 |   :-----------------------                                                     |      
 |                                                                                | 
-|    ChildNodes                                    |
-|    firstChild                                         |
-|    lastChild                           |
-|    nextSibling                           |
-|    nodeName                    |     
-|    nodeType                       |
-|    nodeValue                                                    |
-|    parentNode      |   
-|    previousSibling                       |
+|    appendChild()                                    |
+|    cloneNode()                                        |
+|    compareDocumentPosition()                           |
+|    contains()                           |
+|    hasChildNodes()                    |     
+|    insertBefore()                       |
+|    isEqualNode()                                                    |
+|    removeChild()      |   
+|    replaceChild()                       |
 
 
 
