--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -53,4 +53,9 @@
 
 
 
-
+### determining the type of node so that you might know which properties and methods are available
+- ex
+  - console.log(document.querySelector('a').nodeType === Node.ElEMENT_NODE);
+  => //true
+  
+  
