--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -59,3 +59,16 @@
   => //true
   
   
+<br><br>
+  
+### insertBefore
+
+var div = document.createElement('div')
+div.id = 'ste';
+div.textContent = 'hello';
+
+//handle
+var handle = document.querySelector('handle');
+//append
+handle.insertBefore(div,handle.firstChild);
+  
