--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -63,12 +63,12 @@
   
 ### insertBefore
 
-var div = document.createElement('div')
-div.id = 'ste';
-div.textContent = 'hello';
+var div = document.createElement('div');         
+div.id = 'ste';     
+div.textContent = 'hello';      
 
-//handle
-var handle = document.querySelector('handle');
-//append
-handle.insertBefore(div,handle.firstChild);
+//handle      
+var handle = document.querySelector('handle');      
+//append       
+handle.insertBefore(div,handle.firstChild);        
   
