--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -62,6 +62,9 @@
 <br><br>
   
 ### insertBefore
+- requires 2 parameters:
+  - node to be inserted    
+  - reference node in document    
 
 var div = document.createElement('div');         
 div.id = 'ste';     
