--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -74,4 +74,37 @@ div.textContent = 'hello';
 var handle = document.querySelector('handle');      
 //append       
 handle.insertBefore(div,handle.firstChild);        
+
+
+<br><br>
+
+### cloneNode()
+- it is possible to duplicate a single node or a node and all of its children
+
+example:      
+
+```
+    <ul>
+      <li>Hi</li>
+      <li>there</li>
+    </ul>
+    
+    var cloneUL = document.querySelector('ul').cloneNode();
+    console.log(cloneUL);
+    
+    => Hi
+    => there
+```
+
+
+
+
+
+
+
+
+
+
+
+
   
