--- a/1.notesJS/23.DOM.md
+++ b/1.notesJS/23.DOM.md
@@ -97,8 +97,14 @@ example:
 ```
 
 
+<br><br>
+### getting a list/ collection of all immediate child nodes
+> contains element nodes and text/comment nodes as well
 
-
+<br />
+  
+<kbd>node types</kbd>       
+![js1](images/dom03.png)
 
 
 
