--- a/1.notesJS/09.PassingVariables.md
+++ b/1.notesJS/09.PassingVariables.md
@@ -26,7 +26,8 @@ Given **b=a**, passing/copying by reference means
      
 > &#161; **b** ends up with the same value as **a**.
 
- ![js1](images/passing1.png?raw=true "mobile" target="_blank")
+
+ ![](images/passing1.png)
  
  When we declared **variable a** and equal it to **7**.             
  In memory, **a** gets memory allocation (**address 001**) and the value 
