--- a/1.notesJS/09.PassingVariables.md
+++ b/1.notesJS/09.PassingVariables.md
@@ -24,7 +24,7 @@ Given **b=a**, passing/copying by reference means
      var b = a;
 ```
      
-> &#161; **b** ends up with the same value as **a**.
+> **b** ends up with the same value as **a**.
 
 
  ![](images/passing1.png)
@@ -46,9 +46,9 @@ Given **b=a**, passing/copying by reference means
      var b = a;
 ```
      
-> &#161; **b** ends up with the same value as **a**.
+>  **b** ends up with the same value as **a**.
 
- ![js1](images/passing2.png?raw=true "mobile" target="_blank") 
+ ![](images/passing2.png) 
  
 
  When we override the **variable b** with the value **5**,   
@@ -71,7 +71,7 @@ Given **b=a**, passing/copying by reference means
  
 > This is an object literal with a property x:7.     
  
- ![js1](images/passing3.png?raw=true "mobile" target="_blank") 
+ ![](images/passing3.png) 
 
  Again **001** is the memory location, but what gets put into that
  memory location as the value is another memory location (**003**)
@@ -85,7 +85,7 @@ Given **b=a**, passing/copying by reference means
  The value **003** is copied into **b**. So **b** now which is sitting on **004**
  it's value is another memory location with a value of **003**.
  
- ![js1](images/passing4.png?raw=true "mobile" target="_blank")
+ ![](images/passing4.png)
   
  Now both **var a** and **var b** are pointing to **003**. So when we update
  what we are updating is the memory location which is what
@@ -151,7 +151,7 @@ console.log(a); &nbsp; &nbsp; //Object {x:5}
 
 
 <kbd>summary</kbd>
-![js1](images/passinglast.png?raw=true "mobile" target="_blank")
+![](images/passinglast.png)
  
  :collision:
  
